@@ -54,3 +54,4 @@ Thanks to:
     argument to gvisGeoChart.
   o Jacqueline Buros for providing code to include formats parameter 
     to gvisTable()
+  o JJ Allaire for pointing out how to use the viewer pane in RStudio
