@@ -130,6 +130,11 @@
   The displayed page includes a link (click on the chart id) to a
   further page, which shows the code of the chart for the user to copy
   and paste into her own page.
+  
+  googleVis will use the Viewer pane in RStudio (version >= 0.98.441) 
+  to display non-Flash charts by default. The setting is controlled
+  via the option viewer. Set \code{options("viewer"=NULL)} and the googleVis
+  plot function will open all output in the default browser again.
 }
 
 %% ~Make other sections like Warning with \section{Warning }{....} ~
